@@ -1,4 +1,14 @@
-### fix(Makefile): Fixed the 'make help' function in Makefile (HEAD)
+### refactor(search.py): Refactored and optimized code for search.py (HEAD -> feat/apachesis)
+>Thu, 11 Apr 2024 14:38:17 +0200
+
+>Author: Emile-Muller (emile.muller.contact@gmail.com)
+
+>Commiter: Emile-Muller (emile.muller.contact@gmail.com)
+
+
+
+
+### fix(Makefile): Fixed the 'make help' function in Makefile
 >Thu, 11 Apr 2024 14:22:25 +0200
 
 >Author: Emile-Muller (emile.muller.contact@gmail.com)
